# pytorch-project

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: check_environment.ipynb
scripts/dataset/: cifar10.py  mnist.py
scripts/python/: class_of_function.py  collate_fn.py
scripts/pytorch/: check_max.py  check_module_hooks.py  check_no_grad.py  check_parameters.py  check_prerprocess_in_model.py  check_statedict.py  check_tensor_data.py  check_tensor_dtype.py  check_torch_jit_script.py  check_train_flow.py  pil_to_tensor.py
